[tool.poetry]
name = "Personal-Ablog"
version = "0.1.0"
description = ""
authors = ["Dragonlord1005"]

[tool.poetry.dependencies]
python = "^3.8"
ablog = "^0.10.23"
Sphinx = "^4.3.2"
poethepoet = "^0.11.0"

[tool.poetry.dev-dependencies]

[tool.poe.tasks]
replitdeploy = { cmd = "ablog deploy -g Dragonlord1005 --github-token ablog", help = "When using replit, this will publish the build to github pages" }
idk = "ghp-import -o -n -p _website"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
